<resources>
    <string name="app_name">Custom Caps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_caps">CUSTOM CAPS</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Регистрация</string>
    <string name="shop">Магазин кепок</string>
    <string name="name">Имя</string>
    <string name="number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="or">────────── или ──────────</string>
    <string name="already_have">Уже есть аккаунт?</string>
    <string name="signup">Еще не зарегистрировались?</string>
    <string name="forgot">Забыли пароль? Восстановить пароль</string>
    <string name="search">Поиск</string>
    <string name="popular_brands">Популярные Бренды</string>
    <string name="new_era">New Era</string>
    <string name="adidas">Adidas</string>
    <string name="nike">Nike</string>
    <string name="vans">Vans</string>
    <string name="bestsellers">Бестселлеры</string>
    <string name="see_all">Смотреть все</string>
    <string name="promotions">Акции</string>
    <string name="new_password">Восстановить пароль</string>
    <string name="enter_number">Введите номер, указанный при регистрации. Вам будет отправлен код подтверждения</string>
    <string name="ex_desc">Golden State Warriors Icon</string>
    <string name="sizes">Размеры</string>
    <string name="extended_desc">Кепка Golden State Warriors Icon 59FIFTY Fitted Cap имеет вышитый логотип Warriors на передних панелях, а также надпись World Champs с дополнительными командными нашивками и вышивкой по всей остальной части короны. Дополнительные детали включают цветной логотип NBA команды сзади и серый нижний слой.</string>
    <string name="similar_products">Похожие товары</string>
    <string name="price_2500">2500 сом</string>
    <string name="add_to_shopping_cart">Добавить в корзину</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="profile">Профиль</string>
    <string name="my_orders">Мои заказы</string>
    <string name="location">Адрес</string>
    <string name="arslan">Арслан Камчыбеков</string>
    <string name="arslankamcybekov7_gmail_com">arslankamcybekov7@gmail.com</string>
    <string name="_996706007740">+996706007740</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="facebook_app_id">356748859655920</string>
    <string name="fb_login_protocol_scheme">fb356748859655920</string>
    <string name="email">Email</string>
    <string name="favorites">Избранные</string>
    <string name="date">Дата:</string>
    <string name="status">Статус:</string>
    <string name="order_details">Детали заказа</string>
    <string name="order_date">Дата заказа:</string>
    <string name="order_sent">Дата отправки:</string>
    <string name="sort">Сортировка</string>
    <string name="popular">Популярные</string>
    <string name="cheap">Сначала \nдешевые</string>
    <string name="news">Новинки</string>
    <string name="expensive">Cначала \nдорогие</string>
    <string name="apply">Применить</string>
    <string name="buy">Купить</string>
    <string name="cart">Корзина</string>
    <string name="sum">Сумма</string>
    <string name="delivery">Доставка</string>
    <string name="toast_tv">Ваш заказ принят, \nОжидайте, очень скоро с Вами свяжутся</string>
    <string name="to_main">На главную</string>
    <string name="_0">0</string>
    <string name="empty">Корзина пуста</string>
    <string name="bishkek">Бишкек</string>
    <string name="_2019">2019</string>
    <string name="_2018">2018</string>
</resources>