<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.fragments.signUp.SignUpFragment">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="85dp"
            android:layout_height="65dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="16dp"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:drawableStart="@drawable/ic_number"
            android:drawablePadding="16dp"
            android:hint="@string/number"
            android:inputType="phone"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="16dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="Autofill" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/orange"
        android:padding="20dp"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="60dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_facebook"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_google"
            tools:ignore="ContentDescription" />

    </LinearLayout>


</LinearLayout>