<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.profile.ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/my_account"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_user" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="24dp"
                android:src="@drawable/ic_main_page" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_location" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginVertical="24dp"
                android:src="@drawable/ic_logout" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/my_orders"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>