<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_auth"
    android:orientation="vertical"
    tools:context=".presentation.fragments.auth.AuthFragment">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="85dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginVertical="40dp"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_custom_caps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/custom_caps"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="20dp"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="60dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:padding="20dp"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="60dp" />

    </LinearLayout>

</LinearLayout>