<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/img_handler"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/light_grey"
                android:paddingHorizontal="30dp"
                android:paddingVertical="16dp"
                android:text="@string/popular"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cheap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:paddingHorizontal="30dp"
                android:paddingVertical="16dp"
                android:text="@string/cheap"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/light_grey"
                android:paddingHorizontal="30dp"
                android:paddingVertical="16dp"
                android:text="@string/news"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_expensive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:paddingHorizontal="30dp"
                android:paddingVertical="16dp"
                android:text="@string/expensive"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:cornerRadius="24dp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/orange"
        android:paddingVertical="20dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="24dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp" />

</LinearLayout>